--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -94,6 +94,7 @@ body {
     height: 45px;
     flex-shrink: 0;
     margin-left: 37px;
+    border: 1px solid #D9D9D9!important;
     margin-right: 35px;
 }
 
@@ -192,9 +193,10 @@ body {
         justify-content: center;
         /* align-items: center; */
     }
-    .ForMediaQuery-Hero-Section-Content{
 
-        width: 400px!important;
+    .ForMediaQuery-Hero-Section-Content {
+
+        width: 400px !important;
     }
 }
 
@@ -303,6 +305,7 @@ body {
     /* background-color: red; */
 
 }
+
 @media screen and (min-width: 618px) {
     .Hero-Section-Form .card {
         width: 555px;
@@ -1003,8 +1006,13 @@ body {
     align-items: center;
     margin-top: 33px;
     background-color: #268FC5;
+    border: 0px;
 }
 
+.GetStartedBtn:focus {
+    outline: none!important;
+    /* Remove the default focus outline (optional) */
+}
 
 /* .GetStartedBtn:nth-child(2) {
     width: 350px;
@@ -1922,13 +1930,14 @@ body {
 }
 
 .ProfileLi>.card>h3 {
-    margin-top: 8.2px;
+    margin-top: 8.25px;
     color: #1C1D20;
     font-family: Inter;
     font-size: 15px;
     font-style: normal;
     font-weight: 600;
     line-height: 113%;
+    height: 62.7px;
     /* 16.95px */
     /* margin-left: 13px; */
     letter-spacing: -0.195px;
@@ -1936,9 +1945,10 @@ body {
 
 .ProfileLi>.card>ul {
     /* list-style: none; */
-    margin-top: 6.89px;
+    margin-top: 6.6px;
     /* width: 100%; */
     padding-left: 0px;
+    padding-right: 0px;
     margin: 0px;
     display: flex;
     justify-content: center;
@@ -1964,6 +1974,6 @@ body {
     margin-right: 5.1px;
     white-space: nowrap;
     margin-top: 9.9px;
-    margin-right: 8px;
+    /* margin-right: 8px; */
 
 }
